@@ -13,6 +13,9 @@
 	* src/import-export/qif-import/qif-dialog-utils.scm:
 	  gnc:get-account-from-full-name requires two args, not three (#334170)
 
+	* Makefile.am: put ".links" into lib so rm -rf works properly
+	  from the top-level of the source tree.
+
 2006-03-10  David Hampton  <hampton@employees.org>
 
 	* src/gnome-utils/gnc-main-window.c: Show newly created windows
